--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.9"
 services:
   fastapi_app:
     build: .
+    env_file:
+      - .env
     container_name: fastapi_app
     volumes:
       - .:/app
